--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
+  "name": "cerita-nusantara",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js", 
   "scripts": {
-    "start": "webpack serve --mode development",
-    "build": "webpack --mode production"
+    "start": "node server.js"
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
@@ -17,20 +20,5 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3"
-  },
-  "devDependencies": {
-    "copy-webpack-plugin": "^13.0.0",
-    "css-loader": "^7.1.2",
-    "html-webpack-plugin": "^5.6.3",
-    "style-loader": "^4.0.0",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.1"
-  },
-  "name": "cerita-nusantara",
-  "version": "1.0.0",
-  "main": "webpack.config.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  }
 }
