--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "cerita-nusantara",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js", 
+  "main": "backend/server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node backend/server.js",
+    "build": "webpack --mode production",
+    "dev": "webpack serve --mode development"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "aos": "^3.0.0-beta.6",
     "bcrypt": "^6.0.0",
@@ -20,5 +25,13 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3"
+  },
+  "devDependencies": {
+    "copy-webpack-plugin": "^13.0.0",
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.3",
+    "style-loader": "^4.0.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.1"
   }
 }
