--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "cerita-nusantara",
   "version": "1.0.0",
   "description": "",
-  "main": "backend/server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node backend/server.js",
-    "build": "webpack --mode production",
-    "dev": "webpack serve --mode development"
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +21,6 @@
     "leaflet": "^1.9.4",
     "lit-html": "^3.3.0",
     "multer": "^2.0.0",
-    "mysql": "^2.18.1",
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3"
   },
