--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "cerita-nusantara",
   "version": "1.0.0",
   "description": "",
-  
+  "scripts": {
+    "start": "node server.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
