perbaikan dan penambahan api

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,15 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
-DB_NAME=ceritanusantara
-JWT_SECRET=rahasiaSuperAman
+# DB_HOST=localhost
+# DB_USER=root
+# DB_PASSWORD=
+# DB_NAME=ceritanusantara
+# JWT_SECRET=rahasiaSuperAman
 
+
+
+DB_HOST=ceritanusantara.site
+DB_USER=ceritanu_admin
+DB_PASSWORD=dMUqfk${fzOg
+DB_NAME=ceritanu_ceritanusantara
+
+PORT=8000
+JWT_SECRET=rahasiaSuperAman
